# isthisland

./: .gitignore  Cargo.toml  README.md
src/: earth_image.rs  main.rs
