[package]
name = "isthisland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shapefile = { version = "0.4.0", features = ["geo-types"] }
geo = "0.24.1"
geo-types = "0.7.9"
anyhow = "1"
image = "0.24.6"